--- a/views/public/html/indexpage.html
+++ b/views/public/html/indexpage.html
@@ -206,7 +206,7 @@
            
             
            
-           
+           <okay>
 
             <li class="menu-header small text-uppercase">
               <span class="menu-header-text">Settings</span>
@@ -660,19 +660,7 @@
                         <span class="align-middle">My Profile</span>
                       </a>
                     </span>
-                    <span>
-                      <a class="dropdown-item" href="#">
-                        <i class="bx bx-cog me-2"></i>
-                        <span class="align-middle">Settings</span>
-                      </a>
-                    </span>
-                    <span>
-                      <a class="dropdown-item" href="#">
-                        <span class="d-flex align-items-center align-middle">
-                          <i class="flex-shrink-0 bx bx-credit-card me-2"></i>
-                          <span class="flex-grow-1 align-middle">Billing</span>
-                          <span class="flex-shrink-0 badge badge-center rounded-pill bg-danger w-px-20 h-px-20">4</span>
-                        </span>
+                     
                       </a>
                     </span>
                     <span>
@@ -785,7 +773,7 @@
                                 
                             </div>  
                             <div class="card p-5 pb-0 mt-3 w-100">
-                              <h6 class="fw-bolder ">Top available candidates</h6>
+                              <h6 class="fw-bolder ">Total available candidates</h6>
                             <div id="rankCharts" ></div>
                             </div>
                             
@@ -794,7 +782,7 @@
                         </div>
                         <div class="card p-5 text-center mt-3">
                          <!-- HTML layout in the client-side -->
-<!-- HTML layout using Bootstrap -->
+
 <div class="container">
   <div class="row">
     <div class="col">
