--- a/views/public/html/search.html
+++ b/views/public/html/search.html
@@ -586,22 +586,7 @@
                         <span class="align-middle">My Profile</span>
                       </a>
                     </li>
-                    <li>
-                      <a class="dropdown-item" href="#">
-                        <i class="bx bx-cog me-2"></i>
-                        <span class="align-middle">Settings</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="#">
-                        <span class="d-flex align-items-center align-middle">
-                          <i class="flex-shrink-0 bx bx-credit-card me-2"></i>
-                          <span class="flex-grow-1 align-middle">Billing</span>
-                          <span class="flex-shrink-0 badge badge-center rounded-pill bg-danger w-px-20 h-px-20">4</span>
-                        </span>
-                      </a>
-                    </li>
-                    <li>
+                     
                       <div class="dropdown-divider"></div>
                     </li>
                     <li>
@@ -626,7 +611,9 @@
 <div class="input-group w-50 mx-auto">
   <input type="text" class="form-control form-control-sm " placeholder="Search..." id="search_input">
   <button class="btn btn-primary btn-sm" id="search_btn">Search Entire Database</button>
+  
 </div>
+<p class="text-center"><strong class="text-primary">Note : </strong>Kindly specify the search when using Search entire database, If common values like 1 or a is searched site will crash!</p>
 
           
 <div class="ms-3 me-3">
@@ -726,7 +713,7 @@
     </form>
     
     
-      <p class="mb-0 mt-3 text-center  "><strong>Note</strong>: Clicking on search without any inputs will fetch all the candidate details associated with this User account.</p>
+      <p class="mb-0 mt-3 text-center  "><strong class="text-primary">Note</strong>: Clicking on search without any inputs will fetch all the candidate details associated with this User account.</p>
     </div>
   </div>
 </div>
