--- a/views/public/html/view-company.html
+++ b/views/public/html/view-company.html
@@ -549,32 +549,12 @@
 
                 <!-- User -->
                 <li class="nav-item navbar-dropdown dropdown-user dropdown">
-                  <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);" data-bs-toggle="dropdown">
-                    <div class="avatar avatar-online">
-                      <img src="../assets/img/avatars/1.png" alt class="w-px-40 h-auto rounded-circle" />
-                    </div>
-                  </a>
-                  <ul class="dropdown-menu dropdown-menu-end">
-                    <li>
-                      <a class="dropdown-item" href="#">
-                        <div class="d-flex">
-                          <div class="flex-shrink-0 me-3">
-                            <div class="avatar avatar-online">
-                              <img src="../assets/img/avatars/1.png" alt class="w-px-40 h-auto rounded-circle" />
-                            </div>
-                          </div>
-                          <div class="flex-grow-1">
-                            <span class="fw-semibold d-block">John Doe</span>
-                            <small class="text-muted">Admin</small>
-                          </div>
-                        </div>
-                      </a>
-                    </li>
+                 
                     <li>
                       <div class="dropdown-divider"></div>
                     </li>
                     <li>
-                      <a class="dropdown-item" href="#">
+                      <a class="dropdown-item" href="./profile.html">
                         <i class="bx bx-user me-2"></i>
                         <span class="align-middle">My Profile</span>
                       </a>
@@ -618,7 +598,7 @@
                                   <th scope="col" style="font-size: 8px;">Serial&nbsp;No</th>
                                   <th scope="col" style="font-size: 8px;">Company&nbsp;ID</th>
                                   <th scope="col" style="font-size: 8px;">Company&nbsp;Name</th>
-                                  <th scope="col" style="font-size: 8px;">Business&nbsp;Type</th>
+                                  <!-- <th scope="col" style="font-size: 8px;">Business&nbsp;Type</th> -->
                                   <th scope="col" style="font-size: 8px;">Contact&nbsp;Person</th>
                                   <th scope="col" style="font-size: 8px;">Email</th>
                                   <th scope="col" style="font-size: 8px;">Address</th>
@@ -667,17 +647,17 @@
                         </div>
                       </div>
           
-                      <div class="col-md-6">
+                      <!-- <div class="col-md-6">
                         <div class="form-floating p-3">
                           <div>
                             <label for="fms">FMS</label>
-                            <input type="hidden" id="u_fms" name="u_business_type" value="FMS" required />
+                            <input type="hidden" id="u_fms" name="u_business_type" value="1" required />
           
                             <label for="fpp">FPP</label>
-                            <input type="hidden" id="u_fpp" name="u_business_type" value="FPP" required />
+                            <input type="hidden" id="u_fpp" name="u_business_type" value="2" required />
                           </div>
                         </div>
-                      </div>
+                      </div> -->
           
                       <div class="col-md-6">
                         <div class="form-floating">
