--- a/views/public/html/edit-company.html
+++ b/views/public/html/edit-company.html
@@ -519,17 +519,7 @@
 
             <div class="navbar-nav-right d-flex align-items-center" id="navbar-collapse">
               <!-- Search -->
-              <div class="navbar-nav align-items-center">
-                <div class="nav-item d-flex align-items-center">
-                  <i class="bx bx-search fs-4 lh-0"></i>
-                  <input
-                    type="text"
-                    class="form-control border-0 shadow-none"
-                    placeholder="Search..."
-                    aria-label="Search..."
-                  />
-                </div>
-              </div>
+                
               <!-- /Search -->
 
               <ul class="navbar-nav flex-row align-items-center ms-auto">
@@ -548,32 +538,13 @@
 
                 <!-- User -->
                 <li class="nav-item navbar-dropdown dropdown-user dropdown">
-                  <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);" data-bs-toggle="dropdown">
-                    <div class="avatar avatar-online">
-                      <img src="../assets/img/avatars/1.png" alt class="w-px-40 h-auto rounded-circle" />
-                    </div>
-                  </a>
-                  <ul class="dropdown-menu dropdown-menu-end">
-                    <li>
-                      <a class="dropdown-item" href="#">
-                        <div class="d-flex">
-                          <div class="flex-shrink-0 me-3">
-                            <div class="avatar avatar-online">
-                              <img src="../assets/img/avatars/1.png" alt class="w-px-40 h-auto rounded-circle" />
-                            </div>
-                          </div>
-                          <div class="flex-grow-1">
-                            <span class="fw-semibold d-block">John Doe</span>
-                            <small class="text-muted">Admin</small>
-                          </div>
-                        </div>
-                      </a>
-                    </li>
+                 
+                   
                     <li>
                       <div class="dropdown-divider"></div>
                     </li>
                     <li>
-                      <a class="dropdown-item" href="#">
+                      <a class="dropdown-item" href="./profile.html">
                         <i class="bx bx-user me-2"></i>
                         <span class="align-middle">My Profile</span>
                       </a>
@@ -660,7 +631,7 @@
                         </div>
                       </div>
           
-                      <div class="col-md-6">
+                      <!-- <div class="col-md-6">
                         <div class="form-floating p-3">
                           <div>
                             <label for="fms">FMS</label>
@@ -670,7 +641,7 @@
                             <input type="radio" id="u_fpp" name="u_business_type" value="FPP" required />
                           </div>
                         </div>
-                      </div>
+                      </div> -->
           
                       <div class="col-md-6">
                         <div class="form-floating">
@@ -739,7 +710,7 @@
                         <div class="form-floating">
                           <select class="form-select" id="u_company_management" aria-describedby="managementHelp" required>
                             <option value="" selected disabled>Select Management Type</option>
-                            <option value="Owners">Owners</option>
+                            <option value="Owner">Owners</option>
                             <option value="Managers">Managers</option>
                           </select>
                           <label for="company_management">Management</label>
